--- a/teacher/index.html
+++ b/teacher/index.html
@@ -154,7 +154,7 @@
 </div>
 
 <div id="mainArea">
-  <div id="totalScore">🎯 Tổng điểm: 0</div>
+  <div id="totalScore">🎯</div>
 
   <div id="controlPanel">
     <button onclick="openExplain(1)">📖 Giải thích 1</button>
@@ -175,7 +175,7 @@
         <tr>
           <th>👤 Nhóm</th>
           <th>🅰️ Phương án</th>
-          <th>🏆 Tổng điểm</th>
+          <th>🏆 Điểm</th>
         </tr>
       </thead>
       <tbody id="answerList"></tbody>
