--- a/teacher/index.html
+++ b/teacher/index.html
@@ -6,7 +6,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <style>
-    body {
+    body { 
       font-family: Arial, sans-serif;
       margin: 20px;
       display: flex;
@@ -157,6 +157,7 @@
   <div id="totalScore">🎯</div>
 
   <div id="controlPanel">
+    <img src="images/C01.png" alt="Câu hỏi 1" />
     <button onclick="openExplain(1)">📖 Giải thích 1</button>
     <button onclick="openExplain(2)">📖 Giải thích 2</button>
     <button onclick="openExplain(3)">📖 Giải thích 3</button>
