--- a/teacher/index.html
+++ b/teacher/index.html
@@ -157,7 +157,8 @@
   <div id="totalScore">🎯</div>
 
   <div id="controlPanel">
-    <img src="images/C01.png" alt="Câu hỏi 1" />
+    <img src="images/banner.png" style="width: 60%; height: auto;">
+
     <button onclick="openExplain(1)">📖 Giải thích 1</button>
     <button onclick="openExplain(2)">📖 Giải thích 2</button>
     <button onclick="openExplain(3)">📖 Giải thích 3</button>
