--- a/teacher/index.html
+++ b/teacher/index.html
@@ -7,6 +7,11 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <style>
     body { 
+      background-image: url('images/background.png'); /* Hình nền */
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      font-family: Arial, sans-serif;
       font-family: Arial, sans-serif;
       margin: 20px;
       display: flex;
