--- a/teacher/index.html
+++ b/teacher/index.html
@@ -7,7 +7,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <style>
     body { 
-      background-image: url('images/nen.jpg'); /* Hình nền */
+      background-image: url('images/nen.png'); /* Hình nền */
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
