--- a/student/index.html
+++ b/student/index.html
@@ -82,8 +82,8 @@
       db.ref("currentQuestion").off();  // Dừng lắng nghe câu hỏi
       resetButtonSelection();  // Reset các nút lựa chọn
       disableButtons();  // Vô hiệu hóa các nút trả lời
-      document.getElementById("loginArea").style.display = "block";
-      document.getElementById("quizArea").style.display = "none";
+      document.getElementById("loginArea").style.display = "block";  // Hiển thị lại giao diện đăng nhập
+      document.getElementById("quizArea").style.display = "none";  // Ẩn giao diện quiz
     }
   });
 
