--- a/student/index.html
+++ b/student/index.html
@@ -2,46 +2,74 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <title>Học sinh trả lời</title>
+  <title>Học Sinh Trả Lời</title>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
-    img { max-width: 90%; height: auto; margin-bottom: 20px; border: 2px solid #ccc; border-radius: 10px; }
-    #options button { font-size: 20px; padding: 10px 20px; margin: 10px; border: none; border-radius: 8px; background-color: #4CAF50; color: white; cursor: pointer; }
-    #options button.selected { background-color: #f39c12; }
-    #options button.disabled { background-color: #ccc; cursor: not-allowed; }
-    #countdown { font-size: 24px; color: red; margin-bottom: 20px; }
-    #loginArea { margin-bottom: 20px; }
-    #loginArea input { padding: 10px; font-size: 18px; }
-    #loginArea button { padding: 10px 20px; font-size: 18px; background-color: #4CAF50; color: white; border: none; border-radius: 8px; cursor: pointer; }
-    #answeredQuestions { margin-top: 20px; text-align: left; display: inline-block; }
-    #answeredQuestions li { font-size: 18px; margin-bottom: 5px; }
+    body {
+      font-family: Arial, sans-serif;
+      background-image: url('images/background.jpg'); /* Hình nền */
+      background-size: cover;
+      background-position: center center;
+      background-repeat: no-repeat;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .question-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      border: 2px solid #ccc;
+      border-radius: 10px;
+      padding: 20px;
+      background-color: rgba(255, 255, 255, 0.8);
+    }
+    .question-container img {
+      width: 300px;
+      max-width: 100%;
+      border-radius: 8px;
+    }
+    .answer-buttons {
+      display: flex;
+      gap: 15px;
+      margin-top: 20px;
+    }
+    .answer-buttons button {
+      padding: 15px;
+      font-size: 18px;
+      border: 1px solid #3498db;
+      background-color: #3498db;
+      color: white;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .answer-buttons button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+    .countdown {
+      font-size: 24px;
+      color: red;
+      margin-bottom: 20px;
+    }
   </style>
 </head>
 <body>
 
-<h2>🎯 Hệ thống trả lời câu hỏi</h2>
+<div class="question-container">
+  <h2 id="questionTitle">Câu hỏi: </h2>
+  <img id="questionImage" src="" alt="Câu hỏi hình ảnh">
+  <div class="countdown" id="countdown">⏱️ Còn lại: —</div>
 
-<div id="loginArea">
-  <h3>Nhập tên nhóm của bạn:</h3>
-  <input type="text" id="studentName" placeholder="Nhập tên..." />
-  <button onclick="startQuiz()">Bắt đầu</button>
-</div>
-
-<div id="quizArea" style="display:none;">
-  <div id="studentDisplay"></div>
-  <div id="countdown">⏱️ Còn lại: —</div>
-  <img id="questionImage" src="" alt="Câu hỏi sẽ xuất hiện tại đây">
-  <div id="options">
-    <button>A</button>
-    <button>B</button>
-    <button>C</button>
-    <button>D</button>
+  <div class="answer-buttons">
+    <button id="answerA" onclick="submitAnswer('A')">A</button>
+    <button id="answerB" onclick="submitAnswer('B')">B</button>
+    <button id="answerC" onclick="submitAnswer('C')">C</button>
+    <button id="answerD" onclick="submitAnswer('D')">D</button>
   </div>
-
-  <h3>📋 Các câu đã trả lời:</h3>
-  <ul id="answeredQuestions"></ul>
 </div>
 
 <script>
@@ -57,156 +85,81 @@
   firebase.initializeApp(firebaseConfig);
   const db = firebase.database();
 
-  const imageEl = document.getElementById("questionImage");
   const countdownEl = document.getElementById("countdown");
-  const buttons = document.querySelectorAll("#options button");
-  const studentDisplay = document.getElementById("studentDisplay");
-  const answeredQuestionsEl = document.getElementById("answeredQuestions");
+  const questionImage = document.getElementById("questionImage");
+  const questionTitle = document.getElementById("questionTitle");
+  const answerButtons = document.querySelectorAll(".answer-buttons button");
 
-  let currentQuestion = null;
   let countdownInt = null;
-  let answerAllowed = false;
-  let allAnswers = {};
-  let selectedAnswers = {};
-  let resetHandled = false;
+  let currentQuestion = null;
+  let studentChoice = null;
 
-  // Lắng nghe tín hiệu reset từ Firebase
-  db.ref("resetSignal").on("value", snap => {
-    if (snap.exists() && !resetHandled) {
-      resetHandled = true;
-      localStorage.removeItem("name");  // Xóa tên nhóm đã lưu khi reset
-      alert("Giáo viên đã reset. Vui lòng nhập tên lại!");
-
-      // Dừng toàn bộ các tác vụ và quay lại màn hình đăng nhập
-      clearInterval(countdownInt);  // Dừng countdown
-      db.ref("currentQuestion").off();  // Dừng lắng nghe câu hỏi
-      resetButtonSelection();  // Reset các nút lựa chọn
-      disableButtons();  // Vô hiệu hóa các nút trả lời
-      document.getElementById("loginArea").style.display = "block";  // Hiển thị lại giao diện đăng nhập
-      document.getElementById("quizArea").style.display = "none";  // Ẩn giao diện quiz
+  db.ref("currentQuestion").on("value", snapshot => {
+    const data = snapshot.val();
+    if (data && data.number) {
+      currentQuestion = data.number;
+      loadQuestion(currentQuestion);
     }
   });
 
-  function startQuiz() {
-    const nameInput = document.getElementById("studentName").value.trim();
-    if (nameInput.length < 1) {
-      alert("Vui lòng nhập tên!");
-      return;
-    }
-    localStorage.setItem("name", nameInput);
-    studentDisplay.innerText = "👨‍🎓 Tên nhóm: " + nameInput;
-    document.getElementById("loginArea").style.display = "none";
-    document.getElementById("quizArea").style.display = "block";
+  function loadQuestion(qn) {
+    const padded = String(qn).padStart(2, '0');
+    const imgPath = `./images/c${padded}.png`;
+    questionImage.src = imgPath;
+    questionTitle.innerText = `Câu hỏi ${qn}:`;
 
-    db.ref("currentQuestion").on("value", snap => {
-      if (snap.exists()) {
-        const qn = snap.val().number;
-        if (currentQuestion !== qn) {
-          currentQuestion = qn;
-          const padded = String(qn).padStart(2, '0');
-          imageEl.src = `./images/C${padded}.png`;
-          resetButtonSelection();
-          enableButtons();
-          if (qn == 1) {
-            startCountdown(90); // Câu 1: 90 giây
-          } else {
-            startCountdown(30); // Các câu khác: 30 giây
-          }
-        }
-      }
+    // Reset choice when new question loads
+    studentChoice = null;
+    enableAnswerButtons(true);
+    startCountdown(30);
+  }
+
+  function submitAnswer(choice) {
+    if (!studentChoice) {
+      studentChoice = choice;
+      enableAnswerButtons(false); // Disable the buttons once answered
+
+      db.ref(`studentChoices/${currentQuestion}`).set({
+        choice: studentChoice
+      });
+    }
+  }
+
+  function enableAnswerButtons(enable) {
+    answerButtons.forEach(button => {
+      button.disabled = !enable;
     });
   }
 
   function startCountdown(sec) {
-    clearInterval(countdownInt);
     let t = sec;
     countdownEl.innerText = `⏱️ ${t}s`;
-    answerAllowed = true;
-    enableButtons();
-
     countdownInt = setInterval(() => {
       t--;
       countdownEl.innerText = `⏱️ ${t}s`;
       if (t <= 0) {
         clearInterval(countdownInt);
         countdownEl.innerText = "⏱️ 0s";
-        answerAllowed = false;
-        disableButtons();
-        saveAnswerAfterTimeout();
+        submitAnswer("timeout");
       }
     }, 1000);
   }
 
-  function saveAnswerAfterTimeout() {
-    const name = localStorage.getItem("name");
-    if (!name) {
-      alert("Vui lòng nhập tên!");
-      return;
+  db.ref("resetSignal").on("value", snapshot => {
+    if (snapshot.val()) {
+      resetStudentInterface();
     }
-    const key = "cau" + currentQuestion;
-    const ans = selectedAnswers[key] || "Không chọn";
-    allAnswers[key] = ans;
-    const listItem = document.createElement("li");
-    listItem.textContent = `Câu ${currentQuestion}: ${ans}`;
-    answeredQuestionsEl.appendChild(listItem);
-    db.ref("answers/" + name).set(allAnswers);
-  }
-
-  buttons.forEach(b => {
-    b.onclick = () => {
-      if (!answerAllowed || !currentQuestion) return;
-      const ans = b.innerText;
-      selectedAnswers["cau" + currentQuestion] = ans;
-      resetButtonSelection();
-      b.classList.add("selected");
-    };
   });
 
-  function resetButtonSelection() {
-    buttons.forEach(b => b.classList.remove("selected"));
+  function resetStudentInterface() {
+    clearInterval(countdownInt);
+    countdownEl.innerText = "⏱️ Còn lại: —";
+    studentChoice = null;
+    enableAnswerButtons(true);
+    questionImage.src = "";
+    questionTitle.innerText = "Chờ câu hỏi mới...";
+    alert("Hệ thống đã được reset, bạn hãy đợi câu hỏi mới.");
   }
-
-  function disableButtons() {
-    buttons.forEach(b => {
-      b.classList.add("disabled");
-      b.disabled = true;
-    });
-  }
-
-  function enableButtons() {
-    buttons.forEach(b => {
-      b.classList.remove("disabled");
-      b.disabled = false;
-    });
-  }
-
-  window.onload = function() {
-    const savedName = localStorage.getItem("name");
-    if (savedName) {
-      document.getElementById("studentName").value = savedName;
-      studentDisplay.innerText = "👨‍🎓 Tên nhóm: " + savedName;
-      document.getElementById("loginArea").style.display = "none";
-      document.getElementById("quizArea").style.display = "block";
-
-      db.ref("currentQuestion").on("value", snap => {
-        if (snap.exists()) {
-          const qn = snap.val().number;
-          if (currentQuestion !== qn) {
-            currentQuestion = qn;
-            const padded = String(qn).padStart(2, '0');
-            imageEl.src = `./images/C${padded}.png`;
-            resetButtonSelection();
-            enableButtons();
-            if (qn === 1) {
-              startCountdown(90); // Câu 1: 90 giây
-            } else {
-              startCountdown(30); // Các câu khác: 30 giây
-            }
-          }
-        }
-      });
-    }
-  };
 </script>
 
 </body>
