--- a/teacher/index.html
+++ b/teacher/index.html
@@ -12,6 +12,7 @@
       background-position: center center;
       background-repeat: no-repeat;
       font-family: Arial, sans-serif;
+      font-family: Arial, sans-serif;
       margin: 20px;
       display: flex;
       gap: 20px;
@@ -161,6 +162,8 @@
    <img src="images/banner.png" style="width: 90%; height: auto;">
 
   <div id="controlPanel">
+  
+
     <button onclick="openExplain(1)">📖 Giải thích 1</button>
     <button onclick="openExplain(2)">📖 Giải thích 2</button>
     <button onclick="openExplain(3)">📖 Giải thích 3</button>
@@ -186,6 +189,11 @@
     </table>
   </div>
 
+  <div id="teamScores">
+    <div class="teamBox" id="team1">Đội 1: Điểm 0</div>
+    <div class="teamBox" id="team2">Đội 2: Điểm 0</div>
+  </div>
+
   <div id="resetButtonContainer">
     <button onclick="resetSystem()">🔄 Reset</button>
   </div>
@@ -208,6 +216,8 @@ const questionListEl = document.getElementById("questionList");
 const questionImage = document.getElementById("questionImage");
 const countdownEl = document.getElementById("countdown");
 const answerListEl = document.getElementById("answerList");
+const team1El = document.getElementById("team1");
+const team2El = document.getElementById("team2");
 const totalScoreEl = document.getElementById("totalScore");
 
 let countdownInt = null;
@@ -235,6 +245,9 @@ function startQuestion(qn, btn) {
   const padded = String(qn).padStart(2, '0');
   const imgPath = `./images/C${padded}.png`;
 
+  const oldVideo = document.querySelector("video");
+  if (oldVideo) oldVideo.remove();
+
   db.ref("currentQuestion").set({ number: qn });
   answerListEl.innerHTML = "";
 
@@ -244,41 +257,64 @@ function startQuestion(qn, btn) {
   document.querySelectorAll("#questionList button").forEach(b => b.classList.remove("selected"));
   btn.classList.add("selected");
 
+  if (qn === 10) {
+    showVideoThenImage('./videos/C10.mp4', imgPath);
+  } else if (qn === 1 || qn === 3) {
+    showVideoAndImageTogether(`./videos/C0${qn}.mp4`, imgPath);
+  } else {
+    questionImage.style.display = "block";
+    questionImage.src = imgPath;
+    startCountdown(qn === 1 ? 90 : 30);
+  }
+}
+
+function showVideoAndImageTogether(videoSrc, imgSrc) {
+  const video = document.createElement("video");
+  video.src = videoSrc;
+  video.controls = true;
+  video.autoplay = true;
+  video.className = "mediaDisplay";
+
   questionImage.style.display = "block";
-  questionImage.src = imgPath;
-  startCountdown(qn === 1 ? 90 : 30);
+  questionImage.src = imgSrc;
+
+  questionImage.parentNode.insertBefore(video, questionImage);
+  startCountdown(currentQuestion === 1 ? 90 : 30);
+}
+
+function showVideoThenImage(videoSrc, imgSrc) {
+  const video = document.createElement("video");
+  video.src = videoSrc;
+  video.controls = true;
+  video.autoplay = true;
+  video.className = "mediaDisplay";
+
+  questionImage.style.display = "none";
+  questionImage.parentNode.insertBefore(video, questionImage);
+
+  video.addEventListener("ended", () => {
+    video.remove();
+    questionImage.style.display = "block";
+    questionImage.src = imgSrc;
+    startCountdown(30);
+  });
 }
 
 function resetSystem() {
   clearInterval(countdownInt);
-  countdownEl.innerText = "⏱️ Còn lại: —";  // Reset countdown
-
   db.ref("currentQuestion").remove();
   db.ref("answers").remove();
-  db.ref("studentChoices").remove();
-  db.ref("teacherChoices").remove();
   db.ref("resetSignal").set(Date.now());
-
   questionImage.src = "";
+  countdownEl.innerText = "⏱️ Còn lại: —";
   answerListEl.innerHTML = "";
-  totalScoreEl.innerHTML = "🎯 Tổng điểm: 0";
-
   document.querySelectorAll("#questionList button").forEach(b => b.classList.remove("active"));
-  document.querySelectorAll("#questionList button").forEach(b => b.classList.remove("selected"));
-
-  disableStudentChoices(true);
-
   studentAnswers = {};
   teamScores = { team1: 0, team2: 0 };
-
+  team1El.innerHTML = "Đội 1: Điểm 0";
+  team2El.innerHTML = "Đội 2: Điểm 0";
+  totalScoreEl.innerHTML = "🎯 Tổng điểm: 0";
   alert("Đã reset toàn bộ hệ thống!");
-}
-
-function disableStudentChoices(disable) {
-  const studentButtons = document.querySelectorAll(".student-choice-button");
-  studentButtons.forEach(button => {
-    button.disabled = disable;
-  });
 }
 
 function startCountdown(sec) {
@@ -315,24 +351,41 @@ function loadAnswers() {
           studentAnswer = "Không chọn";
         }
 
-        const row = document.createElement("tr");
-        row.innerHTML = `<td>${name}</td><td>${studentAnswer}</td><td>1</td>`;
-        answerListEl.appendChild(row);
+        const correctAnswer = correctAnswers[ansKey];
+        const score = (studentAnswer === correctAnswer) ? 3 : 0;
 
-        studentScores[name] = 1;
+        if (!studentScores[name]) studentScores[name] = 0;
+        studentScores[name] += score;
+
+        if (name.startsWith("Team1")) {
+          teamScores.team1 += score;
+          team1El.innerHTML = `Đội 1: Điểm ${teamScores.team1}`;
+        } else if (name.startsWith("Team2")) {
+          teamScores.team2 += score;
+          team2El.innerHTML = `Đội 2: Điểm ${teamScores.team2}`;
+        }
+
+        const tr = document.createElement("tr");
+        tr.innerHTML = `<td>${name}</td><td>${studentAnswer}</td><td>${studentScores[name]}</td>`;
+        answerListEl.appendChild(tr);
       }
 
-      updateTeamScores(studentScores);
+      const total = teamScores.team1 + teamScores.team2;
+      totalScoreEl.innerHTML = `🎯 Tổng điểm: ${total}`;
     }
   });
 }
 
-function updateTeamScores(studentScores) {
-  const team1Score = Object.values(studentScores).reduce((total, score) => total + score, 0);
-  const team2Score = Object.values(studentScores).reduce((total, score) => total + score, 0);
-
-  totalScoreEl.innerHTML = `🎯 Tổng điểm: Team1: ${team1Score}, Team2: ${team2Score}`;
+function openExplain(number) {
+  const links = {
+    1: 'https://example.com/giai-thich-1',
+    2: 'https://example.com/giai-thich-2',
+    3: 'https://example.com/giai-thich-3',
+    4: 'https://example.com/giai-thich-4'
+  };
+  window.open(links[number], '_blank');
 }
 </script>
+
 </body>
 </html>
