--- a/teacher/index.html
+++ b/teacher/index.html
@@ -244,7 +244,8 @@ function startQuestion(qn, btn) {
   } else {
     questionImage.style.display = "block";
     questionImage.src = imgPath;
-    startCountdown(30);
+     startCountdown(qn === 1 ? 90 : 30);
+
   }
 }
 
@@ -259,7 +260,7 @@ function showVideoAndImageTogether(videoSrc, imgSrc) {
   questionImage.src = imgSrc;
 
   questionImage.parentNode.insertBefore(video, questionImage);
-  startCountdown(30);
+    startCountdown(currentQuestion === 1 ? 90 : 30);
 }
 
 function showVideoThenImage(videoSrc, imgSrc) {
