--- a/teacher/index.html
+++ b/teacher/index.html
@@ -189,7 +189,10 @@
     </table>
   </div>
 
-
+  <div id="teamScores">
+    <div class="teamBox" id="team1">Đội 1: Điểm 0</div>
+    <div class="teamBox" id="team2">Đội 2: Điểm 0</div>
+  </div>
 
   <div id="resetButtonContainer">
     <button onclick="resetSystem()">🔄 Reset</button>
@@ -276,7 +279,7 @@ function showVideoAndImageTogether(videoSrc, imgSrc) {
   questionImage.src = imgSrc;
 
   questionImage.parentNode.insertBefore(video, questionImage);
- 
+  startCountdown(currentQuestion === 1 ? 90 : 30);
 }
 
 function showVideoThenImage(videoSrc, imgSrc) {
